--- a/beamer.tex
+++ b/beamer.tex
@@ -3,7 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usetheme{Antibes}
 \title{Beamer}
-\author{ PPT PRESENTATION BY RAHEMATH BEGUM}
+\author{ PPT PRESENTATION BY SAZZAD TELLA}
 \date{26 08 2022}
 
 \begin{document}
@@ -32,9 +32,9 @@ Upload in GitHub with proper names.
  \hline
 S.no & Names & Class\\
 \hline
-1 & Rahemath & btech-1 \\
+1 & Sazzad & btech-1 \\
 \hline
-2 & Iqra & agriculture\\
+2 & Ajay & agriculture\\
 \hline
    \end{tabular} 
 \end{frame}
